--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Quiz</title>
-    <link rel="stylesheet" href="estilos/estiloPincipal.css">
+    <link rel="stylesheet" href="estilos/pagInicial.css">
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
     <h3 class="sub-titulo">Você gosta de frutas? Sabe tudo sobre elas? Teste seus conhecimentos aqui!</h3>
     <p class="txtNomeUser">Digite como você gostaria de ser chamado:</p>
     <input type="text" id="userNome" placeholder="Digite seu nome ou apelido.">
-    <a href="#" class="btnStart">Vamos começar?</a>
+    <a href="pergunta01.html" class="btnStart">Vamos começar?</a>
 </body>
 </html>
