--- a/pergunta05.html
+++ b/pergunta05.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
-    <p class="pergunta"> 05. Que fruta é nativa do Brasul e tem um formato que lembra uma estrela?</p>
-    <ul class="lista-opcoes">
-        <li class="opcoes">Acerola</li>
-        <li class="opcoes">Pitanga</li>
-        <li class="opcoes">Carambola</li>
-        <li class="opcoes">Jabuticaba</li>
-        <li class="opcoes">Graviola</li>
-    </ul>
-    <a href="#"id="verificar" class="btn-proximo">Confirmar</a>
-    <p id="mensagem"></p>
+    <p class="pergunta"> 05. Qual fruta nativa da Mata Atlântica, conhecida por sua casca escura e polpa branca adocicada, inspirou o nome de uma cidade histórica em Minas Gerais?</p>
+    <div id="div-opcoes" data-proxima-pagina="pagFinal.html">
+        <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Pitanga</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Jabuticaba</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Cambuci</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Araça</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Grumixama</button>
+    </div>
 
-    <script src="javascript/script.js"></script>
+    <div id="mensagem"></div>
+    
+    <script src="javascript/respostas.js"></script>
 </body>
