--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <h1 class="titulo">Fruit Quiz</h1>
     <h3 class="sub-titulo">Você gosta de frutas? Sabe tudo sobre elas? Teste seus conhecimentos aqui!</h3>
     <p class="txtNomeUser">Digite como você gostaria de ser chamado:</p>
-    <input type="text" id="userNome" placeholder="Digite seu nome ou apelido.">
-    <a href="pergunta01.html" class="btnStart">Vamos começar?</a>
+    
+    <input type="text" id="nome" placeholder="Digite seu nome ou apelido." required>
+    <p id="mensagem"></p>
+    <button type="button" class="btnStart" onclick="validarNome()">Vamos começar?</button>
+
+    <script src="javascript/validandoUsuario.js"></script>
 </body>
 </html>
