--- a/pergunta01.html
+++ b/pergunta01.html
@@ -9,14 +9,16 @@
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
     <p class="pergunta"> 01. Qual fruta é conhecida por ter uma coroa?</p>
-    <ul class="lista-opcoes">
-        <li class="opcoes">Maça</li>
-        <li class="opcoes">Banana</li>
-        <li class="opcoes">Abacaxi</li>
-        <li class="opcoes">Morango</li>
-        <li class="opcoes">Uva</li>
-    </ul>
-    <a href="#"id="verificar" class="btn-proximo">Confirmar</a>
+    
+    <div id="div-opcoes" data-proxima-pagina="pergunta02.html">
+        <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Maça</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Banana</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Abacaxi</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Morango</button>
+        <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Uva</button>
+    </div>
 
-    <script src="javascript/script.js"></script>
+    <div id="mensagem"></div>
+
+    <script src="javascript/respostas.js"></script>
 </body>
