--- a/pergunta04.html
+++ b/pergunta04.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
-    <p class="pergunta"> 04. Que fruta é nativa do Brasul e tem um formato que lembra uma estrela?</p>
+    <p class="pergunta"> 04. Que fruta é nativa do Brasil e tem um formato que lembra uma estrela?</p>
     <div id="div-opcoes" data-proxima-pagina="pergunta05.html">
         <button class="opcoes" onclick="verificarResposta(this,'Carambola')">Acerola</button>
         <button class="opcoes" onclick="verificarResposta(this,'Carambola')">Pitanga</button>
