--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Quiz</title>
     <link rel="stylesheet" href="estilos/pagInicial.css">
+    <link rel="stylesheet" href="estilos/responsivo.css" media="screen and (max-width: 580px)">
 </head>
 <body>
+    <div class= "tela-responsivo"></div>
     <h1 class="titulo">Fruit Quiz</h1>
     <h3 class="sub-titulo">Você gosta de frutas? Sabe tudo sobre elas? Teste seus conhecimentos aqui!</h3>
     <p class="txtNomeUser">Digite como você gostaria de ser chamado:</p>
