--- a/pergunta04.html
+++ b/pergunta04.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Quiz</title>
     <link rel="stylesheet" href="estilos/perguntasVermelho.css">
+    <link rel="stylesheet" href="estilos/responsivo.css" media="screen and (max-width: 580px)">
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
