style: refatora paleta de cores e ajustes visuais

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class= "tela-responsivo"></div>
     <h1 class="titulo">Fruit Quiz</h1>
     <h3 class="sub-titulo">Você gosta de frutas? Sabe tudo sobre elas? Teste seus conhecimentos aqui!</h3>
-    <p class="txtNomeUser">Digite como você gostaria de ser chamado:</p>
+    <label for="nome" class="txtNomeUser">
+  Digite como você gostaria de ser chamado:
+    </label>
+
     
     <input type="text" id="nome" placeholder="Digite seu nome ou apelido." required>
     <p id="mensagem"></p>
