--- a/pagFinal.html
+++ b/pagFinal.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Quiz</title>
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/pagFinal.css">
-    <link rel="stylesheet" href="estilos/responsivo.css" media="screen and (max-width: 580px)">
 </head>
 <body>
     <div class= "tela-responsivo"></div>
     <h1 class="titulo">Fruit Quiz</h1>
-    <h2 class="sub-titulo">WOOOW! PARABÉNS<p id="usuario"></p>VOCÊ ACERTOU TODAS AS PERGUNTAS!!.</h2>
+    <h2 class="sub-titulo">
+  WOOOW! PARABÉNS <span id="usuario"></span>  
+  VOCÊ ACERTOU TODAS AS PERGUNTAS!!
+    </h2>
 
     <a href="index.html" class="btn-jogarNovamente">Jogar Novamente?</a>
 
