--- a/pergunta05.html
+++ b/pergunta05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Quiz</title>
-    <link rel="stylesheet" href="estilos/perguntasVerde.css">
+    <link rel="stylesheet" href="estilos/estilosPerguntas.css">
     <link rel="stylesheet" href="estilos/responsivo.css" media="screen and (max-width: 580px)">
 </head>
 <body>
