feat: adiciona feedback visual ao acertar perguntas

--- a/pergunta01.html
+++ b/pergunta01.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
+     <p class="progresso">Pergunta 1 de 5</p>
     <p class="pergunta"> 01. Qual fruta é conhecida por ter uma coroa?</p>
     
-    <div id="div-opcoes" data-proxima-pagina="pergunta02.html">
+    <div id="div-opcoes" data-proxima-pagina="pergunta02.html"    data-fruta="abacaxi">
         <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Maça</button>
         <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Banana</button>
         <button class="opcoes" onclick="verificarResposta(this,'Abacaxi')">Abacaxi</button>
