--- a/pergunta02.html
+++ b/pergunta02.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
+    <p class="progresso">Pergunta 2 de 5</p>
     <p class="pergunta"> 02. Qual fruta é conhecida por ser uma excelente fonte de vitamina C e tem uma casca cítrica e amarela?</p>
-    <div id="div-opcoes" data-proxima-pagina="pergunta03.html">
+    <div id="div-opcoes" data-proxima-pagina="pergunta03.html"    data-fruta="laranja">
         <button class="opcoes" onclick="verificarResposta(this,'Laranja')">Pêssego</button>
         <button class="opcoes" onclick="verificarResposta(this,'Laranja')">Laranja</button>
         <button class="opcoes" onclick="verificarResposta(this,'Laranja')">Amora</button>
