--- a/pergunta03.html
+++ b/pergunta03.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
+     <p class="progresso">Pergunta 3 de 5</p>
     <p class="pergunta"> 03. Qual fruta tem o nome de um pássaro?</p>
-    <div id="div-opcoes" data-proxima-pagina="pergunta04.html">
+    <div id="div-opcoes" data-proxima-pagina="pergunta04.html"    data-fruta="kiwi">
         <button class="opcoes" onclick="verificarResposta(this,'Kiwi')">Kiwi</button>
         <button class="opcoes" onclick="verificarResposta(this,'Kiwi')">Abacaxi</button>
         <button class="opcoes" onclick="verificarResposta(this,'Kiwi')">Acerola</button>
