--- a/pergunta05.html
+++ b/pergunta05.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 class="titulo">Fruit Quiz</h1>
+     <p class="progresso">Pergunta 5 de 5</p>
     <p class="pergunta"> 05. Qual fruta nativa da Mata Atlântica, conhecida por sua casca escura e polpa branca adocicada, inspirou o nome de uma cidade histórica em Minas Gerais?</p>
-    <div id="div-opcoes" data-proxima-pagina="pagFinal.html">
+    <div id="div-opcoes" data-proxima-pagina="pagFinal.html"  data-fruta="jabuticaba">
         <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Pitanga</button>
         <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Jabuticaba</button>
         <button class="opcoes" onclick="verificarResposta(this,'Jabuticaba')">Cambuci</button>
